# APP_BC003

./: .gitignore  PRD — WindOps BC Analyzer Demo v1.1（基于真实数据）.html  PRD — WindOps BC Analyzer Demo v1.2（5方案+评分模型+仪表盘）.html  PRD待确认事项.txt  README.md  WindOps BC Analyzer — 系统架构方案 v1.0.html  WindOps_BC_Analyzer_6_Trae_Prompts.html  datafortesting.xlsx  setup.bat  start.bat  模块 6：知识与规则沉淀 — 预置规则全集（更新版）.html  风力发电机组运维 Business Case 分析平台 — 功能需求规格 v0.4.html
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: ai.py  cases.py  config.py  data.py  rules.py
backend/app/db/: database.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: ai_service.py  data_service.py  rule_engine.py  rule_parser.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AppLayout.tsx
frontend/src/pages/: AIConfig.tsx  CaseCreate.tsx  CaseReview.tsx  Dashboard.tsx  DataManagement.tsx  PlanComparison.tsx  RulesManagement.tsx
frontend/src/stores/: aiConfigStore.ts  caseStore.ts  dataStore.ts  rulesStore.ts
frontend/src/types/: index.ts
