[tool.poetry]
name = "windops-bc-analyzer-backend"
version = "0.1.0"
description = "WindOps BC Analyzer - Backend API"
authors = ["System Architect"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.34"}
sqlalchemy = "^2.0"
aiosqlite = "^0.20"
httpx = "^0.28"
pandas = "^2.2"
openpyxl = "^3.1"
python-multipart = "^0.0.18"
pydantic = "^2.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
